tests/NormalTests/paczka1/fuzzy1/37361848.err
Error in line 4: OBr S159 35,77
Error in line 5: DqqR S159 42,0
Error in line 2: IJMyuuD2J4 A896 15,3
Error in line 13: OBr S159 76,0
Error in line 25: tkE87s S159 58,17
Error in line 27: nDDl3 A896 60,4
Error in line 23: tkE87s S277 94,8
Error in line 24: J5IjB52 S277 42,9
Error in line 17: OBr S358 70,7
